--- a/MVC/CI-Platform/CI-Platform.Services/CI-Platform.Services.csproj
+++ b/MVC/CI-Platform/CI-Platform.Services/CI-Platform.Services.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\CI-Platform.Entities\CI-Platform.Entities.csproj" />
-    <ProjectReference Include="..\CI-Platform.DataAccess\CI-Platform.DataAccess.csproj" />
+    <ProjectReference Include="..\CI-Platform.Entities\CI-Platform.Entities.csproj"/>
+    <ProjectReference Include="..\CI-Platform.DataAccess\CI-Platform.DataAccess.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MimeKit" Version="3.5.0"/>
+    <PackageReference Include="MailKit" Version="3.5.0"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
