--- a/MVC/CI-Platform/CI-PlatformWeb/CI-PlatformWeb.csproj
+++ b/MVC/CI-Platform/CI-PlatformWeb/CI-PlatformWeb.csproj
@@ -7,6 +7,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3" />
     <PackageReference Include="TinyMCE" Version="6.4.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\images\story\" />
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
