--- a/MVC/CI-Platform/CI-PlatformWeb/CI-PlatformWeb.csproj
+++ b/MVC/CI-Platform/CI-PlatformWeb/CI-PlatformWeb.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="TinyMCE" Version="6.4.0" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="wwwroot\images\user\" />
     <Folder Include="wwwroot\images\story\" />
   </ItemGroup>
   <PropertyGroup>
